--- a/htmlTags/canvas.html
+++ b/htmlTags/canvas.html
@@ -13,7 +13,7 @@
             ctx.fillStyle="red";
             ctx.fillRect(20,20,75,50);
 
-            //Turn transparency on!
+            //Turn transparency on
             ctx.globalAlpha = 0.2;
             ctx.fillStyle = "blue";
             ctx.fillRect(50,50,75,50);
