--- a/htmlTags/myBlog.html
+++ b/htmlTags/myBlog.html
@@ -72,7 +72,7 @@
         </aside>
 
         <footer id="mainFooter">
-            <p>Copyright &copy; 2020, BBC News</p>
+            <p>Copyright &copy; Oct 2020, BBC News</p>
         </footer>
     </body>
 </html>
