--- a/Basic_Ex/Basic.html
+++ b/Basic_Ex/Basic.html
@@ -33,6 +33,8 @@
         <p>
             HTML Images are defined with the img tag:
         </p>
-        <img src="dogs.jpg" alt="4 dogs" width="240" height="360"
+        <a href="../Images/dogs.JPG">
+        <img src="../Images/dogs.JPG" alt="4 dogs" width="300" height="400">
+        </a>
     </body>
 </html>
